fix min-height featured-image-behind after style.css update

--- a/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-single.scss
@@ -64,8 +64,7 @@
         }
 
         @include desktop {
-            /*max-width: 58.334%;*/
-            max-width: 65.334%;
+            max-width: 58.334%;
         }
 
         .tags-links {
@@ -219,6 +218,7 @@
             }
 
             .featured-image-behind {
+                min-height: auto !important;
                 .entry-header {
                     @include desktop {
                         max-width: 58.334%;
@@ -336,7 +336,7 @@
 
 .single:not(.has-large-featured-image) .entry-header {
     border-bottom: 0px;
-    max-width: 780px;
+    max-width: 58.334%;
     margin: auto;
     padding:0px;
 }
